# zephyr-wind-turbine-demo

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  Kconfig  README.md  bitbucket-pipelines.yml  west.yml
.github/workflows/: check_code_format.sh  check_equivalence_tests.sh  check_headers.sh  check_include_guards.sh  ci.yml  do_code_format.sh
app/: CMakeLists.txt  Kconfig  debug-mbedtls.conf  openocd.cfg  prj.conf  sysbuild.conf
app/boards/: stm32f746g_disco.conf  stm32f746g_disco.overlay
app/creds/: README.md  convert_keys.py
app/include/: messages.h
app/include/display/: background.h
app/src/: buttons.c  display.c  inverter.c  kamea.c  main.c  network.c  wind_turbine.c
app/sysbuild/mcuboot/: prj.conf
app/sysbuild/mcuboot/boards/: stm32f746g_disco.conf  stm32f746g_disco.overlay
include/app/subsys/: kamea.h
subsys/: CMakeLists.txt  Kconfig
subsys/kamea/: CMakeLists.txt  Kconfig  kamea_mqtt.c
zephyr/: module.yml
